@@ -1,194 +1,200 @@
 package uk.gov.hmcts.reform.sscspostdeploymentfttests;
 
-
+import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import feign.FeignException;
 import io.restassured.http.Headers;
-import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.awaitility.core.ConditionEvaluationLogger;
-import org.junit.Before;
-import org.junit.Test;
+import org.awaitility.core.ConditionTimeoutException;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.env.AbstractEnvironment;
 import org.springframework.core.env.EnumerablePropertySource;
 import org.springframework.core.env.Environment;
 import org.springframework.core.env.MutablePropertySources;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.util.StopWatch;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.domain.TestRequestType;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.domain.TestScenario;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.domain.entities.idam.CredentialRequest;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.domain.entities.idam.UserInfo;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.domain.taskretriever.TaskRetrieverEnum;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.preparers.Preparer;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.AuthorizationHeadersProvider;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.CcdCaseCreator;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.MessageInjector;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.RestMessageService;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.RoleAssignmentService;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.TaskManagementService;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.taskretriever.CamundaTaskRetrieverService;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.taskretriever.TaskMgmApiRetrieverService;
+import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.MessageProcessingFacade;
+import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.TaskOperationsFacade;
+import uk.gov.hmcts.reform.sscspostdeploymentfttests.services.VerifierService;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.CaseIdUtil;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.DeserializeValuesUtil;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.JsonUtil;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.Logger;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.MapSerializer;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.MapValueExtractor;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.util.StringResourceLoader;
-import uk.gov.hmcts.reform.sscspostdeploymentfttests.verifiers.TaskDataVerifier;
 import uk.gov.hmcts.reform.sscspostdeploymentfttests.verifiers.Verifier;
 
-import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.StreamSupport;
 
 import static java.util.Collections.emptyMap;
-import static java.util.concurrent.TimeUnit.SECONDS;
-import static org.awaitility.Awaitility.await;
-import static org.junit.Assert.assertFalse;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.services.AuthorizationHeadersProvider.AUTHORIZATION;
-import static uk.gov.hmcts.reform.sscspostdeploymentfttests.services.AuthorizationHeadersProvider.SERVICE_AUTHORIZATION;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.CaseIdUtil.addAssignedCaseId;
-import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.CLEANUP_USERS_FINISHED;
-import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.CLEANUP_USERS_RUNNING;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_BEFORE_COMPLETED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_BEFORE_FOUND;
-import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_DISABLED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_ENABLED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_FINISHED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_ROLE_ASSIGNMENT_COMPLETED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_ROLE_ASSIGNMENT_FOUND;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_RUNNING;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_RUNNING_TIME;
-import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_START;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_SUCCESSFUL;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_UPDATE_CASE_COMPLETED;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SCENARIO_UPDATE_CASE_FOUND;
+import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.LoggerMessage.SUMMARY_SCENARIOS_RAN;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.MapValueExpander.ENVIRONMENT_PROPERTIES;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.MapValueExtractor.extractOrDefault;
 import static uk.gov.hmcts.reform.sscspostdeploymentfttests.util.MapValueExtractor.extractOrThrow;
 
 @Slf4j
+@ExtendWith(SpringExtension.class)
+@SpringBootTest(classes = Application.class)
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
 
-    @Autowired
-    protected MessageInjector messageInjector;
-    @Autowired
-    protected TaskDataVerifier taskDataVerifier;
-    @Autowired
     protected AuthorizationHeadersProvider authorizationHeadersProvider;
-    @Autowired
-    private CamundaTaskRetrieverService camundaTaskRetrievableService;
-    @Autowired
-    private TaskMgmApiRetrieverService taskMgmApiRetrievableService;
-    @Autowired
-    private RoleAssignmentService roleAssignmentService;
-    @Autowired
-    private TaskManagementService taskManagementService;
-    @Autowired
-    private Environment environment;
-    @Autowired
-    private DeserializeValuesUtil deserializeValuesUtil;
-    @Autowired
-    private ObjectMapper objectMapper;
-    @Autowired
-    private List<Verifier> verifiers;
-    @Autowired
-    private List<Preparer> preparers;
-    @Autowired
-    private CcdCaseCreator ccdCaseCreator;
-    @Autowired
-    private RestMessageService restMessageService;
+    private final MessageProcessingFacade messageFacade;
+    private final TaskOperationsFacade taskFacade;
+    private final VerifierService verifierService;
+    private final Environment environment;
+    private final DeserializeValuesUtil deserializeValuesUtil;
+    private final ObjectMapper objectMapper;
+    private final List<Verifier> verifiers;
+    private final List<Preparer> preparers;
+    private final CcdCaseCreator ccdCaseCreator;
+
     @Value("${wa-post-deployment-test.environment}")
     protected String postDeploymentTestEnvironment;
 
-    @Before
-    public void setUp() {
-        MapSerializer.setObjectMapper(objectMapper);
-        JsonUtil.setObjectMapper(objectMapper);
+    private final ArrayList<String> failedScenarios = new ArrayList<>();
+    private final ArrayList<String> passedScenarios = new ArrayList<>();
+    private StopWatch stopWatch;
+
+    @Value("${scenarioRunner.retryCount}")
+    private int retryCount;
+
+    @Autowired
+    public ScenarioRunnerTest(
+        AuthorizationHeadersProvider authorizationHeadersProvider,
+        Environment environment,
+        DeserializeValuesUtil deserializeValuesUtil,
+        ObjectMapper objectMapper,
+        List<Verifier> verifiers,
+        List<Preparer> preparers,
+        CcdCaseCreator ccdCaseCreator,
+        MessageProcessingFacade messageFacade,
+        TaskOperationsFacade taskFacade,
+        VerifierService verifierService
+    ) {
+        this.authorizationHeadersProvider = authorizationHeadersProvider;
+        this.environment = environment;
+        this.deserializeValuesUtil = deserializeValuesUtil;
+        this.objectMapper = objectMapper;
+        this.verifiers = verifiers;
+        this.preparers = preparers;
+        this.ccdCaseCreator = ccdCaseCreator;
+        this.messageFacade = messageFacade;
+        this.taskFacade = taskFacade;
+        this.verifierService = verifierService;
     }
 
-    @Test
-    public void scenarios_should_behave_as_specified() throws Exception {
-
-        StopWatch stopWatch = new StopWatch();
+    @BeforeAll
+    public void beforeAll() throws Exception {
+        stopWatch = new StopWatch();
         stopWatch.start();
-
-
         loadPropertiesIntoMapValueExpander();
 
         for (Preparer preparer : preparers) {
             preparer.prepare();
         }
 
-        assertFalse("Verifiers configured successfully", verifiers.isEmpty());
+        Assertions.assertFalse(verifiers.isEmpty(), "Verifiers configured successfully");
+        MapSerializer.setObjectMapper(objectMapper);
+        JsonUtil.setObjectMapper(objectMapper);
+    }
 
-        URL path = getClass().getClassLoader().getResource("scenarios");
-        File[] directories = new File(path.toURI()).listFiles(File::isDirectory);
-        Objects.requireNonNull(directories, "No directories found under 'scenarios'");
-
-        Exception testException = null;
-        try {
-            for (File directory : directories) {
-                runAllScenariosFor(directory.getName());
-            }
-        } catch (Exception ex) {
-            testException = ex;
-        } finally {
-            Logger.say(CLEANUP_USERS_RUNNING);
-            authorizationHeadersProvider.cleanupTestUsers();
-            Logger.say(CLEANUP_USERS_FINISHED);
-
-            if (testException != null) {
-                throw testException;
-            }
+    @AfterAll
+    public void tearDown() {
+        if (!failedScenarios.isEmpty()) {
+            StringBuilder sb = new StringBuilder("Failed scenarios:\n=========================================");
+            failedScenarios.forEach(scenario -> sb.append("\n").append(scenario));
+            throw new RuntimeException(sb.toString());
         }
 
         stopWatch.stop();
         Logger.say(SCENARIO_RUNNING_TIME, stopWatch.getTotalTimeSeconds());
+        StringBuilder sb = new StringBuilder();
+        passedScenarios.forEach(scenario -> sb.append("\n").append(scenario));
+        Logger.say(SUMMARY_SCENARIOS_RAN, sb.toString());
     }
 
-    private void runAllScenariosFor(String directoryName) throws Exception {
-        String scenarioPattern = System.getProperty("scenario");
-        if (scenarioPattern == null) {
-            scenarioPattern = "*.json";
-        } else {
-            scenarioPattern = "*" + scenarioPattern + "*.json";
-        }
+    @ParameterizedTest(name = "{index} {0}")
+    @MethodSource("uk.gov.hmcts.reform.sscspostdeploymentfttests.ScenarioSources#ctscScenarios")
+    public void ctsc_scenarios_should_behave_as_specified(String scenarioSource) throws Exception {
+        Assumptions.assumeTrue(scenarioSource != null, "Skipping CTSC scenarios");
+        runScenarioBySource(scenarioSource, retryCount);
+    }
 
-        Collection<String> scenarioSources =
-            StringResourceLoader
-                .load("/scenarios/" + directoryName + "/" + scenarioPattern)
-                .values();
+    @ParameterizedTest(name = "{index} {0}")
+    @MethodSource("uk.gov.hmcts.reform.sscspostdeploymentfttests.ScenarioSources#judgeScenarios")
+    @Disabled("No judge scenarios yet")
+    public void judge_scenarios_should_behave_as_specified(String scenarioSource) throws Exception {
+        Assumptions.assumeTrue(scenarioSource != null, "Skipping Judge scenarios");
+        runScenarioBySource(scenarioSource, retryCount);
+    }
 
-        Logger.say(SCENARIO_START, scenarioSources.size() + " " + directoryName.toUpperCase(Locale.ROOT));
+    @ParameterizedTest(name = "{index} {0}")
+    @MethodSource("uk.gov.hmcts.reform.sscspostdeploymentfttests.ScenarioSources#legalOfficerScenarios")
+    @Disabled("No legal officer scenarios yet")
+    public void lo_scenarios_should_behave_as_specified(String scenarioSource) throws Exception {
+        Assumptions.assumeTrue(scenarioSource != null, "Skipping Legal Officer scenarios");
+        runScenarioBySource(scenarioSource, retryCount);
+    }
 
-        for (String scenarioSource : scenarioSources) {
+    private void runScenarioBySource(String scenarioSource, int retryCount) throws Exception {
+        String description = "";
+        for (int i = 0; i < retryCount; i++) {
+            try {
+                Map<String, Object> scenarioValues = deserializeValuesUtil
+                    .deserializeStringWithExpandedValues(scenarioSource, emptyMap());
 
-            Map<String, Object> scenarioValues = deserializeValuesUtil
-                .deserializeStringWithExpandedValues(scenarioSource, emptyMap());
+                description = extractOrDefault(scenarioValues, "description", "Unnamed scenario");
+                Boolean scenarioEnabled;
+                try {
+                    scenarioEnabled = extractOrDefault(scenarioValues, "enabled", true);
+                } catch (ClassCastException e) {
+                    scenarioEnabled = Boolean.parseBoolean(extractOrDefault(scenarioValues, "enabled", "true"));
+                }
 
-            String description = extractOrDefault(scenarioValues, "description", "Unnamed scenario");
-
-            Boolean scenarioEnabled = extractOrDefault(scenarioValues, "enabled", true);
-
-            if (!scenarioEnabled) {
-                Logger.say(SCENARIO_DISABLED, description);
-            } else {
+                Assumptions.assumeTrue(scenarioEnabled, "ℹ️ SCENARIO: " + description + " **disabled**");
                 Logger.say(SCENARIO_ENABLED, description);
 
                 Map<String, Object> beforeClauseValues = extractOrDefault(scenarioValues, "before", null);
-                List<Map<String, Object>> testClauseValues = new ArrayList<>(Objects.requireNonNull(
-                    MapValueExtractor.extract(scenarioValues, "tests")));
+                Map<String, Object> testClauseValues = Objects.requireNonNull(
+                    MapValueExtractor.extract(scenarioValues, "test"));
                 Map<String, Object> postRoleAssignmentClauseValues = extractOrDefault(scenarioValues,
                     "postRoleAssignments", null);
                 Map<String, Object> updateCaseClauseValues = extractOrDefault(scenarioValues, "updateCase", null);
@@ -220,7 +226,7 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
 
                 if (scenario.getPostRoleAssignmentClauseValues() != null) {
                     Logger.say(SCENARIO_ROLE_ASSIGNMENT_FOUND);
-                    processRoleAssignment(postRoleAssignmentClauseValues, scenario);
+                    taskFacade.processRoleAssignment(postRoleAssignmentClauseValues, scenario);
                     Logger.say(SCENARIO_ROLE_ASSIGNMENT_COMPLETED);
                 }
 
@@ -234,25 +240,17 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
                 processTestClauseScenario(scenario);
                 Logger.say(SCENARIO_SUCCESSFUL, description);
 
+                failedScenarios.removeIf(description::equals);
+                passedScenarios.add(description);
                 Logger.say(SCENARIO_FINISHED);
+                break; // Exit the retry loop if successful or disabled
+            } catch (Error | FeignException | NullPointerException | ConditionTimeoutException | JsonParseException e) {
+                log.error("Scenario {} failed with error {}", description, e.getMessage());
+                if (!failedScenarios.contains(description)) {
+                    failedScenarios.add(description);
+                }
             }
         }
-    }
-
-    private void processRoleAssignment(Map<String, Object> postRoleAssignmentClauseValues, TestScenario scenario)
-        throws IOException {
-        Map<String, Object> postRoleAssignmentValues = scenario.getPostRoleAssignmentClauseValues();
-
-        CredentialRequest credentialRequest = extractCredentialRequest(postRoleAssignmentValues, "credentials");
-        Headers requestAuthorizationHeaders = authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
-
-        String userToken = requestAuthorizationHeaders.getValue(AUTHORIZATION);
-        String serviceToken = requestAuthorizationHeaders.getValue(SERVICE_AUTHORIZATION);
-        UserInfo userInfo = authorizationHeadersProvider.getUserInfo(userToken);
-
-        roleAssignmentService.processRoleAssignments(
-            scenario,
-            postRoleAssignmentClauseValues, userToken, serviceToken, userInfo);
     }
 
     private void processBeforeClauseScenario(TestScenario scenario) throws Exception {
@@ -260,15 +258,15 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
     }
 
     private void processTestClauseScenario(TestScenario scenario) throws Exception {
-        for (Map<String, Object> testClause : scenario.getTestClauseValues()) {
-            processScenario(testClause, scenario);
-        }
+        processScenario(scenario.getTestClauseValues(), scenario);
     }
 
     private void createBaseCcdCase(TestScenario scenario) throws IOException {
         Map<String, Object> scenarioValues = scenario.getScenarioMapValues();
 
-        CredentialRequest credentialRequest = extractCredentialRequest(scenarioValues, "required.credentials");
+        CredentialRequest credentialRequest = authorizationHeadersProvider.extractCredentialRequest(
+            scenarioValues, "required.credentials");
+
         Headers requestAuthorizationHeaders = authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
 
         List<Map<String, Object>> ccdCaseToCreate = new ArrayList<>(Objects.requireNonNull(
@@ -292,7 +290,8 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
     private void updateBaseCcdCase(TestScenario scenario) throws IOException {
         Map<String, Object> scenarioValues = scenario.getScenarioMapValues();
 
-        CredentialRequest credentialRequest = extractCredentialRequest(scenarioValues, "updateCase.credentials");
+        CredentialRequest credentialRequest = authorizationHeadersProvider.extractCredentialRequest(
+            scenarioValues, "updateCase.credentials");
         Headers requestAuthorizationHeaders = authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
 
         List<Map<String, Object>> ccdCaseToUpdate = new ArrayList<>(Objects.requireNonNull(
@@ -334,11 +333,11 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
                 expectationValue, "numberOfMessagesToCheck", 0);
             List<String> expectationCaseIds = CaseIdUtil.extractAllAssignedCaseIdOrDefault(expectationValue, scenario);
 
-            verifyTasks(scenario, taskRetrieverOption, expectationValue, expectedTasks, expectationCaseIds);
-
-            verifyMessages(expectationValue, expectedMessages, expectationCaseIds.get(0));
-
-            removeInvalidMessages(expectationCaseIds.get(0));
+            verifierService.verifyTasks(scenario, taskRetrieverOption, expectationValue,
+                                        expectedTasks, expectationCaseIds);
+            verifierService.verifyMessages(verifiers, expectationValue, expectedMessages,
+                                           expectationCaseIds.getFirst());
+            messageFacade.removeInvalidMessages(expectationCaseIds.getFirst());
         }
     }
 
@@ -349,7 +348,8 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
         TestRequestType requestType = TestRequestType.valueOf(MapValueExtractor.extractOrDefault(
             request, "type", "MESSAGE"));
 
-        CredentialRequest credentialRequest = extractCredentialRequest(request, "credentials");
+        CredentialRequest credentialRequest = authorizationHeadersProvider.extractCredentialRequest(
+            request, "credentials");
         Headers requestAuthorizationHeaders = authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
 
         String userToken = requestAuthorizationHeaders.getValue(AUTHORIZATION);
@@ -358,131 +358,26 @@ public class ScenarioRunnerTest extends SpringBootFunctionalBaseTest {
         log.info("{} request", requestType);
         switch (requestType) {
             case MESSAGE:
-                messageInjector.injectMessage(
+                messageFacade.injectMessage(
                     request,
                     scenario,
                     userInfo
                 );
                 break;
             case CLAIM:
-                taskManagementService.claimTask(scenario, requestAuthorizationHeaders, userInfo);
+                taskFacade.claimTask(scenario, requestAuthorizationHeaders, userInfo);
                 break;
             case ASSIGN:
-                UserInfo assignee = getAssigneeInfo(request);
-                taskManagementService.assignTask(scenario, requestAuthorizationHeaders, assignee);
+                UserInfo assignee = authorizationHeadersProvider.getAssigneeInfo(request);
+                taskFacade.assignTask(scenario, requestAuthorizationHeaders, assignee);
                 break;
             case COMPLETE:
-                taskManagementService.completeTask(scenario, requestAuthorizationHeaders, userInfo);
+                taskFacade.completeTask(scenario, requestAuthorizationHeaders, userInfo);
                 break;
             default:
                 throw new Exception("Invalid request type [" + requestType + "]");
         }
     }
-
-    private void verifyMessages(Map<String, Object> expectationValue, int expectedMessages, String expectationCaseId) {
-        if (expectedMessages > 0) {
-            await()
-                .ignoreException(AssertionError.class)
-                .conditionEvaluationListener(new ConditionEvaluationLogger(log::info))
-                .pollInterval(DEFAULT_POLL_INTERVAL_SECONDS, SECONDS)
-                .atMost(DEFAULT_TIMEOUT_SECONDS, SECONDS)
-                .until(
-                    () -> {
-                        String actualMessageResponse = restMessageService.getCaseMessages(expectationCaseId);
-
-                        String expectedMessageResponse = buildMessageExpectationResponseBody(
-                            expectationValue,
-                            Map.of("caseId", expectationCaseId)
-                        );
-
-                        Map<String, Object> actualResponse = MapSerializer.deserialize(actualMessageResponse);
-                        Map<String, Object> expectedResponse = MapSerializer.deserialize(expectedMessageResponse);
-
-                        verifiers.forEach(verifier ->
-                            verifier.verify(
-                                expectationValue,
-                                expectedResponse,
-                                actualResponse
-                            )
-                        );
-
-                        return true;
-                    });
-        }
-    }
-
-    private void verifyTasks(TestScenario scenario, String taskRetrieverOption, Map<String, Object> expectationValue,
-                             int expectedTasks, List<String> expectationCaseIds) throws IOException {
-        if (expectedTasks > 0) {
-            CredentialRequest credentialRequest = extractCredentialRequest(expectationValue, "credentials");
-            Headers expectationAuthorizationHeaders =
-                authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
-
-            if (TaskRetrieverEnum.CAMUNDA_API.getId().equals(taskRetrieverOption)) {
-                camundaTaskRetrievableService.retrieveTask(
-                    expectationValue,
-                    scenario,
-                    expectationCaseIds.get(0),
-                    expectationAuthorizationHeaders
-                );
-            } else {
-                taskMgmApiRetrievableService.retrieveTask(
-                    expectationValue,
-                    scenario,
-                    expectationCaseIds,
-                    expectationAuthorizationHeaders
-                );
-            }
-        }
-    }
-
-    private UserInfo getAssigneeInfo(Map<String, Object> request) throws IOException {
-        CredentialRequest credentialRequest = extractCredentialRequest(request, "input.assignee.credentials");
-        Headers requestAuthorizationHeaders = authorizationHeadersProvider.getWaUserAuthorization(credentialRequest);
-
-        String userToken = requestAuthorizationHeaders.getValue(AUTHORIZATION);
-        return authorizationHeadersProvider.getUserInfo(userToken);
-    }
-
-    private CredentialRequest extractCredentialRequest(Map<String, Object> map, String path) {
-        String credentialsKey = extractOrThrow(map, path + ".key");
-        boolean granularPermission = extractOrDefault(map, path + ".granularPermission", false);
-
-        return new CredentialRequest(credentialsKey, granularPermission);
-    }
-
-    @SneakyThrows
-    private void removeInvalidMessages(String expectationCaseId) {
-
-        log.info("Checking Invalid Messages for caseId: " + expectationCaseId);
-        String actualMessageResponse = restMessageService.getCaseMessages(expectationCaseId);
-
-        Map<String, Object> actualResponse = MapSerializer.deserialize(actualMessageResponse);
-
-        List<Map<String, Object>> messagesSent = new ArrayList<>(Objects.requireNonNull(
-            MapValueExtractor.extract(actualResponse, "caseEventMessages")));
-
-        messagesSent.forEach(messageData -> {
-            String state = MapValueExtractor.extract(messageData, "State");
-            log.info("State: " + state);
-            if ("UNPROCESSABLE".equals(state)) {
-                String messageId = MapValueExtractor.extract(messageData, "MessageId");
-                String caseId = MapValueExtractor.extract(messageData, "CaseId");
-                log.info("Found UNPROCESSABLE messageId: " + messageId + " caseId:" + caseId);
-                restMessageService.deleteMessage(messageId, caseId);
-            }
-        });
-    }
-
-    private String buildMessageExpectationResponseBody(Map<String, Object> clauseValues,
-                                                       Map<String, String> additionalValues)
-        throws IOException {
-
-        Map<String, Object> scenario = deserializeValuesUtil.expandMapValues(clauseValues, additionalValues);
-        Map<String, Object> roleData = MapValueExtractor.extract(scenario, "messageData");
-        return MapSerializer.serialize(roleData);
-    }
-
 
     private void loadPropertiesIntoMapValueExpander() {
 
